2009-01-27  Nicolas François  <nicolas.francois@centraliens.net>

	* man/nologin.8.xml: Fix typo (HYSTORY -> HISTORY).

2009-01-26  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/gpasswd.c: Only report success to audit and syslog
	when the changes are committed to the system. Do not log failure
	for on-memory changes to audit or syslog. Make sure failures and
	inconsistencies will be reported in case of unexpected failures
	(e.g. malloc failures). Only specify an audit message if it is not
	implicitly implied by the type argument. Removed fail_exit
	(replaced by atexit(do_cleanups)). Log failures in case of
	permission denied.

2009-01-19  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.defs.d/UMASK.xml: Indicate how UMASK is used and
	limitations.
	* man/limits.5.xml: Remove space before an end of tag.
	* man/useradd.8.xml, man/login.defs.d/CREATE_HOME.xml,
	man/login.defs.5.xml: Document the CREATE_HOME variable.
	* etc/login.defs: Improve the documentation of UMASK.

2009-01-06  Sebastian Rick Rijkers  <srrijkers@gmail.com>

	* NEWS, src/su.c: Preserve COLORTERM in addition to TERM when su
	is called with the -l option.

2008-12-23  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/chkname.c: Use a bool when possible instead of integers.
	* libmisc/chkname.c: Add brackets and parenthesis.

2008-12-23  Nicolas François  <nicolas.francois@centraliens.net>

	* man/groupadd.8.xml, configure.in, man/config.xml.in: Use the
	real group name length limit in the documentation.

2008-12-23  Nicolas François  <nicolas.francois@centraliens.net>

	* src/Makefile.am: Only link with the needed library. When
	compiled with PAM support, chfn, chsh, login, newgrp, passwd, and
	su do not need the libcrypt library.

2008-12-23  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/cleanup_group.c: Fix compilation when compiled without
	shadow group support.
